UI: UI Change YAYYYYYYYYYY

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,9 @@
             content="width=device-width, initial-scale=1, target-densitydpi=160dpi, ..."
         />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>frontend</title>
+        <link href="https://unpkg.com/nes.css@latest/css/nes.min.css" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet" />
+        <title>PSU888</title>
     </head>
     <body>
         <div id="root"></div>
