fix: init to production

--- a/frontend/public/static-games/flappy/index.html
+++ b/frontend/public/static-games/flappy/index.html
@@ -79,7 +79,7 @@
         <script src="js/jquery.transit.min.js"></script>
         <script src="js/buzz.min.js"></script>
         <script src="js/main.js"></script>
-        <script src="../game-sdk.js"></script>
+        <script src="../game-sdk.js?v=20260207"></script>
 
         <script>
             function inIframe() {
