--- a/frontend/public/games/slot-machine/index.html
+++ b/frontend/public/games/slot-machine/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slot Machine Game</title>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
@@ -122,7 +123,7 @@
                     <span>50x</span>
                 </div>
                 <div class="pay-item">
-                    <span>Any 3 in a row</span>
+                    <span style="font-size: 16px;">Any 3 in a row</span>
                     <span>2x</span>
                 </div>
             </div>
