feat: implement Slot Machine game with score tracking via GameSDK and a new Leaderboard component.

--- a/frontend/public/static-games/slot-machine/index.html
+++ b/frontend/public/static-games/slot-machine/index.html
@@ -130,6 +130,7 @@
         </div>
     </div>
 
+    <script src="../game-sdk.js?v=20260207"></script>
     <script src="assets/js/main.js"></script>
 </body>
 </html>
