feat: Add Sudoku game with its frontend UI and backend seed data.

--- a/frontend/public/static-games/sudoku/index.html
+++ b/frontend/public/static-games/sudoku/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sudoku</title>
-    <link rel="shortcut icon" href="demo/assets/ico/favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
 </head>
 
